--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 /* Colors */
 :root {
   --color-white: #fff;
-  --color-blue: #f7bea9;
+  --color-blue: #0000ff;
   --color-black: #18191f;
   --color-grey: #474a57;
   --color-skyblue: #e7f6fd;
